Update for PRC-1 changes
